style.css
div.event {
  display: inline-block;
  height: 200px;
  width: 100%;
  margin: 20px;
  text-align: center;
}

div.event:after {
   content: " ";
   visibility: hidden;
   display: block;
   height: 0;
   clear: both;
}

img {
  display: inline-block;
  vertical-align: middle;
  padding-right: 20px;
}

div.description {
  display: inline-block;
  vertical-align: middle;
}

a, a:visited {
  color: black;
  text-decoration: none;
}

